# SAOD_Lab8

./: CMakeLists.txt  CMakePresets.json
SAOD_Lab8/: CMakeLists.txt  SAOD_Lab8.cpp
src/: main.cc
